--- a/ShootingRangeManagementApp/Views/User/ResetPassword.cshtml
+++ b/ShootingRangeManagementApp/Views/User/ResetPassword.cshtml
@@ -2,10 +2,16 @@
 
 
 
-<form action="ResetPassword" method="post" class="p-4 w-75 mx-auto shadow">
+<form  asp-controller="User" asp-action="ResetPassword" method="post" class="p-4 w-75 mx-auto shadow">
 
-    
+
     <input asp-for="@Model.Email" type="hidden" />
+    <div class="mb-3">
+        <label> Old Password:</label>
+        <input type="password" asp-for="@Model.OldPassword" class="form-control" />
+        <span class="text-danger" asp-validation-for="@Model.OldPassword"></span>
+
+    </div>
     <div class="mb-3">
         <label> Password:</label>
         <input type="password" asp-for="@Model.Password" class="form-control" />
@@ -13,12 +19,12 @@
 
     </div>
     <div class="mb-3">
-        <label> Password:</label>
+        <label> Confirm Password:</label>
         <input type="password" asp-for="@Model.ConfirmPassword" class="form-control" />
         <span class="text-danger" asp-validation-for="@Model.ConfirmPassword"></span>
 
     </div>
-    
+
     <div class="mb-3">
         <button type="submit" class="btn btn-primary">Reset Password </button>
     </div>
