--- a/ShootingRangeManagementApp/Views/Home/Edit.cshtml
+++ b/ShootingRangeManagementApp/Views/Home/Edit.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
-            <input asp-for="StoreId" class="form-control" />
+            <input asp-for="StoreId" type="hidden" class="form-control" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="StoreName" class="control-label"></label>
