--- a/ShootingRangeManagementApp/Views/Home/Index.cshtml
+++ b/ShootingRangeManagementApp/Views/Home/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@model List<Store>
 @{ Layout = "~/Views/Shared/_Layout.cshtml"; }
 
-<a asp-action="Create" asp-controller="Home" class="btn btn-outline-success mt-4 ml-4">Add New Store</a>
+@*<a asp-action="Create" asp-controller="Home" class="btn btn-outline-success mt-4 ml-4">Add New Store</a>
 <a asp-action="UserList" asp-controller="User" class="btn btn-outline-success mt-4 ml-4">User List</a>
 <a asp-action="Create" asp-controller="Role" class="btn btn-outline-success mt-4 ml-4">Add New Role</a>
-<a asp-action="Index" asp-controller="Role" class="btn btn-outline-success mt-4 ml-4">Role List</a>
-<table class="mt-4 table table-hover table-bordered table-sm">
+<a asp-action="Index" asp-controller="Role" class="btn btn-outline-success mt-4 ml-4">Role List</a>*@
+<br />
+<table class="table table-hover table-bordered table-sm">
     <thead>
         <tr class="text-center">
             <td>Store Name</td>
