--- a/ShootingRangeManagementApp/Views/Shared/_Layout.cshtml
+++ b/ShootingRangeManagementApp/Views/Shared/_Layout.cshtml
@@ -230,7 +230,7 @@
                     <nav class="mt-2">
                         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                             <!-- Add icons to the links using the .nav-icon class
-                        with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                             <li class="nav-item">
                                 <a href="~/Home/Index" class="nav-link">
                                     <i class="nav-icon fas fa-store-alt"></i>
@@ -248,8 +248,8 @@
                                 </a>
                             </li>
 
-                            
-           
+
+
                             <li class="nav-item">
                                 <a href="#" class="nav-link">
                                     <i class="nav-icon fas fa-users"></i>
@@ -271,7 +271,7 @@
                                             <p>Locale Admin List</p>
                                         </a>
                                     </li>
-                                   
+
                                 </ul>
                             </li>
 
@@ -283,7 +283,31 @@
                                     </p>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                    <i class="nav-icon fas fa-user-tag"></i>
+                                    <p>
+                                        Role
+                                    </p>
+                                    <i class="fas fa-angle-left right"></i>
+                                </a>
+                                <ul class="nav nav-treeview" style="display: block;">
+                                    <li class="nav-item">
+                                        <a href="~/Role" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Role List</p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="~/Role/Create" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Add New Role</p>
+                                        </a>
+                                    </li>
 
+
+                                </ul>
+                            </li>
 
 
 
