--- a/ShootingRangeManagementApp/Views/Store/CalculateMonthlyGiro.cshtml
+++ b/ShootingRangeManagementApp/Views/Store/CalculateMonthlyGiro.cshtml
@@ -1,7 +1,12 @@
 ﻿@model MonthlyGiroViewModel
     <section class="content">
         <div class="container-fluid">
+            <br />
             @*<h3 class="text-md-center">This is calculating monthly giro page.</h3>*@
+            <div class="col-md-3">
+
+                <button href="~/Store/CalculateMonthlyGiro/@Model.StoreId"  type="button" class="btn btn-outline-secondary">Reset</button>
+            </div>
             <h4 class="text-md-center">
                 <i class="fas fa-globe mt-4 "></i> @Model.Store.StoreName
 
