--- a/ShootingRangeManagementApp/Views/User/AssignStore.cshtml
+++ b/ShootingRangeManagementApp/Views/User/AssignStore.cshtml
@@ -9,7 +9,7 @@
     <br />
     <br />
     <input type="submit" value="Submit" />
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js%22%3E</script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js%22%3E"</script>
     <script type="text/javascript">
         $("body").on("change", "#ddlStores", function () {
             $("input[name=StoreName]").val($(this).find("option:selected").text());
